:sparkles: feat: 결제 후 주문 상태 변경 완료 #42

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -15,7 +15,7 @@
             var tossPayments = TossPayments(clientKey);
             tossPayments.requestPayment("카드", {
                 amount: 11200,
-                orderId: '112Ky93erer3T3_Xn3f27PXUZL',
+                orderId: '1abcdef',//7자리 이상이어야 한다.
                 orderName: '토스 티셔츠 외 1건',
                 customerName: '박22x33dfh스',
                 successUrl: 'http://localhost:8080/payments/general/success',
